# RFSN-E2B-AGENT

./: .gitignore  README.md  pyproject.toml  run_agent.py
.github/workflows/: swebench_upstream.yml
dashboard/: app.py  shared.py
dashboard/pages/: 1_Launcher.py  2_Upstream_Stats.py  3_Task_Inspector.py
rfsn_kernel/: __init__.py  controller.py  gate.py  kernel.py  ledger.py  llm_planner.py  planner_interface.py  proposal.py  state.py
rfsn_upstream/: __init__.py  bandit.py  features.py  outcome_db.py  strategies.py  upstream_learner.py
scripts/: generate_report.py  run_swebench_episode.py
tests/: test_kernel_invariants.py  test_upstream_learner.py
