[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfsn-e2b-agent"
version = "2.0.0"
description = "RFSN Deterministic Agent Kernel for Autonomous Code Repair"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dawson Block"}
]
keywords = ["agent", "llm", "code-repair", "swe-bench", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dawsonblock/RFSN-E2B-AGENT"
Repository = "https://github.com/dawsonblock/RFSN-E2B-AGENT"

[project.scripts]
rfsn-agent = "run_agent:main"

[tool.setuptools.packages.find]
include = ["rfsn_kernel*", "rfsn_upstream*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
